--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -56,6 +56,7 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:text="@string/wi_owm_300"
+        android:clickable="true"
         android:textColor="@color/colorPrimary"
         android:textSize="90dp" />
 </RelativeLayout>
